--- a/templates/Account.html
+++ b/templates/Account.html
@@ -14,7 +14,7 @@
 
                 <hr>
 
-                <a href="Front.html" target="_self" type="button" class="btn btn-success pull-right">返回</a>
+                <a href="../" target="_self" type="button" class="btn btn-success pull-right">返回</a>
                 <table class="table table-hover">
                     <thead>
                     <tr>
@@ -35,7 +35,7 @@
                     <td>{{ i.cost  }}</td>
 
                 </tr>
-                {% endif  %}
+                {% endfor  %}
 
                 </tbody>
 
