--- a/templates/Customer.html
+++ b/templates/Customer.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+<script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
+
+</head>
+
 <head>
     <meta charset="UTF-8">
     <title>Customer</title>
@@ -138,7 +144,7 @@
 </style>
 </head>
 
-<body>
+<body onload="repeat()">
 <div class="header" id="head">
   <div class="title">314_G分布式温控系统</div>
 
@@ -152,15 +158,15 @@
 			</div>
             <div class="logD logDtip">
                 <p class="p1">
-                    当前室温：{{currenttemp}}<br>
-                    当前空调状态：{{On}}<br>
+                    当前室温： <span id='currenttemp'></span><br>
+                    当前空调状态：<span id='On'></span><br>
                     当前预期温度：{{targettemp}}<br>
                     当前预期风速：{{targetwind}}
                 </p>
 			</div>
             <!-- 输入框 -->
             <div class="logC">
-                <a  href="../TurnOn" target="_self" type="button" class="logC"><button>打开空调</button></a>
+                <a  href="../TurnOn" target="_self" type="button" class="logC"><button onclick="repeat()">打开空调</button></a>
 			</div>
 
 
@@ -218,9 +224,9 @@
 
 </div>
 
-<script>
+<script type="text/javascript">
     var modle="{{ modle }}";
-    var current_temp={{ currenttemp}}
+    var current_temp={{ currenttemp }}
     var target_temp={{ targettemp }}
     if(modle=="Cold" )
         if(current_temp<target_temp)
@@ -230,8 +236,18 @@
             window.location.href("../TurnOff")
 
 
+
 function logconfir1()
 {
+    var currenttemp =''
+        var On=''
+        $.get("../get_temp", {'currenttemp': currenttemp}, function (ret) {
+            $('#currenttemp').html(ret)
+        })
+        $.get("../get_On", {'On': On}, function (ret) {
+            $('#On').html(ret)
+        })
+     alert('温度不能为空');
      var aa=document.forms['info1'];
      if(aa.temp1.value==""&&aa.temp2.value==""){
          alert('温度不能为空');
@@ -245,21 +261,25 @@ function logconfir1()
 
 function logconfir2()
 {
+
      var aa=document.forms['info2'];
      if(aa.wind.value==""){
          alert('风速不能为空');
       }
 }
 
-
-	setInterval(function(){
-	    var currenttemp = {{currenttemp}};
-	    var targettemp = {{targettemp}};
-	    if (currenttemp>=targettemp){
-	    	turn_off_kongtiao();
-	    }
-		window.location.reload();
-	}, 60000);
+function repeat(){
+   var times = setInterval(function () {
+        var currenttemp =''
+        var On=''
+        $.get("../get_temp", {'currenttemp': currenttemp}, function (ret) {
+            $('#currenttemp').html(ret)
+        })
+        $.get("../get_On", {'On': On}, function (ret) {
+            $('#On').html(ret)
+        })
+    }, 1000);
+}
 
     function check_input_temp() {
         target_temp=document.getElementById("input_temp").valueOf();
