修正session记录会话、Front表单打印

--- a/templates/AirCManager.html
+++ b/templates/AirCManager.html
@@ -214,7 +214,7 @@
 			</div>
 			</form>
             <div class="logC">
-				<a href="../" target="_self"><button>退  出  登  陆</button></a>
+				<a href="/AirCManager/logout/" target="_self"><button>退  出  登  陆</button></a>
 			</div>
 		</div>
 </div>
