--- a/templates/Front.html
+++ b/templates/Front.html
@@ -157,7 +157,7 @@
 			</form>
 
             <div class="logC">
-				<a href="../" target="_self"><button>退  出  登  陆</button></a>
+				<a href="/Front/logout2" target="_self"><button>退  出  登  陆</button></a>
 			</div>
 	</div>
 </div>
