--- a/templates/Account.html
+++ b/templates/Account.html
@@ -18,29 +18,29 @@
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                    <th class="text-left" style="width:50%">起始时间</th>
-                        <th class="text-left" style="width:15%">期望温度</th>
-                        <th class="text-left" style="width:15%">风速</th>
-                        <th class="text-left" style="width:10%">费用</th>
+                        <th class="text-left" style="width:30%">起始时间</th>
+                        <th class="text-left" style="width:30%">结束时间</th>
+                        <th class="text-left" style="width:20%">期望温度</th>
+                        <th class="text-left" style="width:20%">风速</th>
+                        <th class="text-left" style="width:20%">费用</th>
                     </tr>
                     </thead>
                 <tbody>
 
                 {% for i in list %}
                 <tr>
-                    <td>{{ i.time  }}</td>
+                    <td>{{ i.begin_time  }}</td>
+                    <td>{{ i.end_time }}</td>
                     <td>{{ i.temp }}</td>
-
                     <td>{{ i.wind  }}</td>
                     <td>{{ i.cost  }}</td>
-
                 </tr>
                 {% endfor  %}
 
                 </tbody>
 
                 </table> 
-
+               {{ cost }}
             </div>
         </div>
     </div>
