--- a/templates/HotelManager.html
+++ b/templates/HotelManager.html
@@ -196,7 +196,7 @@
 			</div>
 			</form>
             <div class="logC">
-				<a href="../" target="_self"><button>退  出  登  陆</button></a>
+				<a href="/HotelManager/logout" target="_self"><button>退  出  登  陆</button></a>
 			</div>
 		</div>
 
