修正密码输入不可见，增加url自动跳转

--- a/templates/login.html
+++ b/templates/login.html
@@ -152,7 +152,7 @@
 			</div>
 			<div class="lgD">
 				<img src="{% static "img/lock.png" %}" width="20" height="20" alt=""/>
-				<input type="text" name="password"  value=""
+				<input type="password" name="password"  value=""
 					placeholder="输入密码" />
 			</div>
 			<div class="logC">
