修正经理模块获取日报的调度次数正确修改，调整用户账单html返回按钮跳转目标

--- a/templates/customer_account.html
+++ b/templates/customer_account.html
@@ -14,7 +14,7 @@
 
                 <hr>
 
-                <a href="../../" target="_self" type="button" class="btn btn-success pull-right">返回</a>
+                <a href="../cus/{{ customer }}" target="_self" type="button" class="btn btn-success pull-right">返回</a>
                 <table class="table table-hover">
                     <thead>
                     <tr> 
