--- a/templates/Account.html
+++ b/templates/Account.html
@@ -18,8 +18,8 @@
                 <table class="table table-hover">
                     <thead>
                     <tr>
-                        <th class="text-left" style="width:30%">起始时间</th>
-                        <th class="text-left" style="width:30%">结束时间</th>
+                        <th class="text-left" style="width:20%">起始时间</th>
+                        <th class="text-left" style="width:20%">结束时间</th>
                         <th class="text-left" style="width:20%">期望温度</th>
                         <th class="text-left" style="width:20%">风速</th>
                         <th class="text-left" style="width:20%">费用</th>
@@ -40,7 +40,7 @@
                 </tbody>
 
                 </table> 
-               {{ cost }}
+               总费用：{{ cost }}
             </div>
         </div>
     </div>
